--- a/docs/remote-work-memo/memo.tex
+++ b/docs/remote-work-memo/memo.tex
@@ -1,15 +1,375 @@
+% !TEX program = pdflatex
+% Prism-ready LaTeX memo — Remote Work implications of ECB
+% (Incorporates “Expert Redline” edits: TL;DR, actionable ownership, self-assessment,
+% empirical section without “replace this” language, concrete failure-mode examples,
+% Monday-morning actions, objections, improved decision tree.)
+
 \documentclass[11pt]{article}
-\usepackage{geometry}
-\geometry{margin=1in}
 
-\title{The Remote Work Paradox}
-\author{Charlie A. Johnson}
-\date{\today}
+% ---------- Packages ----------
+\usepackage[margin=1in]{geometry}
+\usepackage{amsmath,amssymb}
+\usepackage{booktabs}
+\usepackage{array}
+\usepackage{enumitem}
+\usepackage{microtype}
+\usepackage{tcolorbox}
+\tcbuselibrary{breakable}
 
+% ---------- Version (define BEFORE fancyhdr uses it) ----------
+\newcommand{\version}{Version 0.1}
+
+% ---------- Hyperref (load once, near end) ----------
+\usepackage[
+  pdfauthor={Charlie A. Johnson},
+  pdftitle={The Remote Work Paradox: Why Capital Cannot Compensate for Coordination Latency},
+  pdfsubject={Remote work, coordination latency, Effective Capital Blueprint},
+  pdfkeywords={remote work, ECB, coordination latency, organizational design},
+  colorlinks=true,
+  linkcolor=blue,
+  urlcolor=blue,
+  citecolor=blue
+]{hyperref}
+
+% ---------- Footer ----------
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\fancyhf{}
+\fancyfoot[C]{\footnotesize The Remote Work Paradox --- Charlie A. Johnson --- \version}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{0pt}
+
+% ---------- Commands ----------
+\newcommand{\Leff}{L_{\mathrm{eff}}}
+\newcommand{\ECB}{\mathrm{ECB}}
+\newcommand{\dpa}{\delta_{\mathrm{PA}}}
+\newcommand{\dcoord}{\delta_{\mathrm{coord}}}
+
+% ---------- Title ----------
+\title{The Remote Work Paradox: Why Capital Cannot Compensate for Coordination Latency}
+\author{Working Paper\\[0.25em]Independent Research\\[0.25em]\texttt{research@charlieajohnson.com}}
+\date{January 31, 2026\\[0.5em]\version}
 \begin{document}
 \maketitle
 
+\vspace{-0.75em}
+\begin{abstract}
+Remote work policies often assume that technology, talent, and capital substitute for co-location. This memo argues that this assumption holds only for a subset of work. Using the \emph{Effective Capital Blueprint} (ECB) framework, we show that coordination latency imposes \emph{non-compensable constraints} on agency: beyond latency thresholds, coordination-critical activities become infeasible regardless of capital availability. The practical implication is a predictable bifurcation: some roles are remote-optimal, some are remote-viable with measurable costs, and some are structurally remote-infeasible due to tight feedback-loop requirements.
+\end{abstract}
+
+\vspace{-0.25em}
+\noindent\textbf{TL;DR:} Remote work succeeds for asynchronous tasks, struggles for moderate coordination, and structurally fails for rapid-iteration work—regardless of budget, tools, or intent.
+
+\begin{tcolorbox}[breakable, colback=gray!6, colframe=gray!35, title=Media / Executive Soundbites (optional)]
+\begin{itemize}[leftmargin=*, itemsep=0.2em]
+\item ``Remote work is not one thing—it's three distinct work types with opposite optimal policies.''
+\item ``For rapid-iteration work, throwing money at remote doesn't help—it often makes coordination slower.''
+\item ``The debate isn't ‘remote vs office’—it's matching work type to coordination structure.''
+\end{itemize}
+\end{tcolorbox}
+
 \section{Executive Summary}
-% Memo content here
+\begin{itemize}[leftmargin=*, itemsep=0.3em]
+\item \textbf{Remote work is not one phenomenon.} Work separates into types based on iteration intensity and feedback-loop tightness.
+\item \textbf{ECB lens:} feasibility is governed by an actor’s feasible action set, not nominal resources.
+\item \textbf{Non-compensability:} for coordination-critical work (high iteration count $k$ within deadlines), increasing capital cannot restore feasibility once effective latency crosses a threshold.
+\item \textbf{Policy implication:} blanket ``remote-first'' and naive ``hybrid'' compromises predictably fail for Type III work; success depends on matching policy to work-type.
+\end{itemize}
+
+\section{ECB in One Page}
+\subsection{Core definitions}
+\textbf{Effective Capital Blueprint (ECB):} the set of actions an actor (or organization) can execute within cognitive, temporal, and coordination constraints. Capital expands feasibility only until constraints bind.
+
+\textbf{Coordination latency} aggregates delays from communication, time-zone misalignment, institutional response, settlement/processing, and trust/verification. We denote aggregate effective latency as $\Leff$.
+
+\noindent\textbf{In plain English:} having \$10M doesn’t help if the actions you need require daily iterations that your coordination latency makes impossible—you’re not capital-constrained, you’re latency-constrained.
+
+\subsection{The remote-work wedge}
+Remote work changes $\Leff$ by reducing some components (e.g., raw comms delay) while increasing others (e.g., scheduling, time-zone misalignment, verification, institutional and handoff delays). For some action classes, this pushes feasibility past a threshold.
+
+\section{A Practical Taxonomy for Remote Work}
+
+\subsection{Type I: Latency-insensitive (Remote-compatible)}
+\textbf{Characteristics:}
+\begin{itemize}[leftmargin=*, itemsep=0.2em]
+\item Asynchronous production cycles; infrequent coordination.
+\item Output evaluated on quality/completeness rather than iteration speed.
+\end{itemize}
+\textbf{Examples:} content creation, research/analysis, solo coding on stable systems, passive operations.
+
+\begin{tcolorbox}[breakable, colback=green!5, colframe=green!40, title=Verdict]
+Type I work is often \textbf{remote-optimal}: fewer interruptions, better deep work, access to broader talent pools.
+\end{tcolorbox}
+
+\subsection{Type II: Latency-sensitive (Remote-viable with costs)}
+\textbf{Characteristics:}
+\begin{itemize}[leftmargin=*, itemsep=0.2em]
+\item Moderate coordination requirements (roughly 3--7 feedback cycles).
+\item Iteration can be batched and scheduled; deadlines have slack.
+\end{itemize}
+\textbf{Examples:} client services, sales negotiations, established project management, cross-functional delivery on defined scopes.
+
+\begin{tcolorbox}[breakable, colback=yellow!7, colframe=yellow!40, title=Verdict]
+Type II work is \textbf{remote-viable} but expect a predictable iteration tax (slower cycles, longer lead times, more rework).
+\end{tcolorbox}
+
+\subsection{Type III: Latency-critical (Remote-infeasible past thresholds)}
+\textbf{Characteristics:}
+\begin{itemize}[leftmargin=*, itemsep=0.2em]
+\item Requires high iteration intensity ($k \gtrsim 8$ cycles within a short deadline window).
+\item Tight control loops: delay compounds errors, reduces stability, and prevents rapid correction.
+\end{itemize}
+\textbf{Examples:} early-stage product iteration (test $\rightarrow$ feedback $\rightarrow$ revise), rapid fundraising loops, crisis response, high-velocity collaborative creation.
+
+\begin{tcolorbox}[breakable, colback=red!5, colframe=red!40, title=Verdict]
+Type III work is \textbf{structurally remote-infeasible} once latency thresholds bind: capital cannot compensate for deleted feedback-loop capacity.
+\end{tcolorbox}
+
+\subsection{Quick Self-Assessment: What Type Is Your Work?}
+\textbf{Answer about your primary role:}
+\begin{enumerate}[leftmargin=*, itemsep=0.25em]
+\item How many decision-feedback cycles do you need per month to hit deadlines?
+  \begin{itemize}[leftmargin=*, itemsep=0.15em]
+  \item $<3$ cycles $\rightarrow$ likely Type I
+  \item $3$--$7$ cycles $\rightarrow$ likely Type II
+  \item $\ge 8$ cycles $\rightarrow$ likely Type III
+  \end{itemize}
+\item If one iteration cycle takes $2\times$ longer than expected:
+  \begin{itemize}[leftmargin=*, itemsep=0.15em]
+  \item ``No big deal, I adjust timeline'' $\rightarrow$ Type I/II
+  \item ``Project fails or major quality degradation'' $\rightarrow$ Type III
+  \end{itemize}
+\item Can your work be batched into weekly blocks?
+  \begin{itemize}[leftmargin=*, itemsep=0.15em]
+  \item Yes $\rightarrow$ Type I/II
+  \item No, daily/sub-daily feedback needed $\rightarrow$ Type III
+  \end{itemize}
+\item Primary output is:
+  \begin{itemize}[leftmargin=*, itemsep=0.15em]
+  \item Individual deliverables (reports, code, designs) $\rightarrow$ Type I
+  \item Coordinated projects with clear handoffs $\rightarrow$ Type II
+  \item Rapidly iterating prototypes/strategies $\rightarrow$ Type III
+  \end{itemize}
+\end{enumerate}
+
+\noindent\textbf{Rule of thumb:} If $\ge 3$ answers suggest Type III, you are at high risk of remote ECB collapse. If mixed Type II/III, hybrid may work but measure iteration velocity closely. If clearly Type I, remote is likely optimal.
+
+\section{Why Capital Cannot Compensate: The Delegation Paradox}
+A common response to remote friction is ``hire more people.'' ECB predicts the opposite for Type III work.
+
+\subsection{Mechanism}
+Capital-based mitigation typically operates through delegation:
+\begin{itemize}[leftmargin=*, itemsep=0.2em]
+\item \textbf{Principal--agent delay} $\dpa$: context transfer, verification of understanding, oversight.
+\item \textbf{Coordination overhead} $\dcoord$: synchronization, conflict resolution, multi-party scheduling.
+\end{itemize}
+For iteration-intensive tasks, these delays increase \emph{effective} cycle time:
+\[
+t'_{\mathrm{cycle}} = t_{\mathrm{base}} + f(\Leff) + \dpa + \dcoord
+\]
+so adding capital to hire assistance can \emph{increase} effective latency.
+
+\subsection{Non-compensability in plain language}
+If the work requires $k$ rapid cycles inside a deadline window $T$, then once $\Leff$ pushes cycle time above $T/k$, the action exits the feasible set. Delegation adds delay to the loop rather than removing it, so feasibility cannot be restored with more capital.
+
+\section{What Breaks in Practice: Common Policy Failure Modes}
+
+\subsection{Failure mode 1: Blanket ``remote-first''}
+\textbf{Example (stylized but realistic):} A Series A SaaS company ($\sim\$5$M ARR) goes fully remote.
+\begin{itemize}[leftmargin=*, itemsep=0.2em]
+\item Support (Type I): throughput increases 15\% (fewer interruptions).
+\item Sales (Type II): close rates decline 20\% (longer negotiation cycles).
+\item Product (Type III): iteration velocity collapses 50\% (user testing $\rightarrow$ iteration loop breaks).
+\end{itemize}
+\textbf{Result:} revenue may hold (retention) while innovation silently dies. Two years later, the firm is ``stable'' but can’t ship new bets. ECB diagnosis: the organization assumed all work behaves like Type I.
+
+\subsection{Failure mode 2: Naive ``hybrid as compromise''}
+\textbf{Example:} An investment team adopts ``3 days in-office, 2 remote'' for deals.
+\begin{itemize}[leftmargin=*, itemsep=0.2em]
+\item Closing requires $\sim 10$ rapid partner/founder loops per week (Type III).
+\item Hybrid increases scheduling overhead; effective cycle time rises by $\sim 0.5$ day per cycle.
+\end{itemize}
+\textbf{Result:} deal velocity drops $\sim 40$\%; weekend spillover increases; policy reverts to full co-location for deal teams. ECB diagnosis: hybrid fell below Type III threshold—delivered neither benefit.
+
+\subsection{Failure mode 3: ``technology will save us''}
+\textbf{Example:} A startup spends \$50K on collaboration tools.
+\begin{center}
+\begin{tabular}{@{}ll@{}}
+\toprule
+Latency component & Tool impact \\
+\midrule
+Communication delay & High (improves) \\
+Time-zone misalignment & Low (structural) \\
+Institutional response (legal/finance) & Low (external dependency) \\
+Trust/verification & Partial \\
+Serendipity / rapid pivots & Low (often co-presence dependent) \\
+\bottomrule
+\end{tabular}
+\end{center}
+\textbf{Illustrative calculation:} pre-remote $\Leff \approx 1.5$ days/cycle ($\sim 20$ cycles/month); post-remote $\Leff \approx 4.2$ ($\sim 7$ cycles/month): a 65\% reduction in iteration capacity despite tooling. ECB diagnosis: tools reduce compensable components; structural components still exceed thresholds.
+
+\section{Empirical Pattern: The Reversal Signature}
+
+ECB predicts a distinct signature in relocation data:
+\begin{enumerate}[leftmargin=*, itemsep=0.2em]
+\item Relocations increasing $\Leff$ should show elevated reversal rates.
+\item Reversals should concentrate among high-iteration (Type III) roles.
+\item Capital levels should not moderate the effect once thresholds bind (non-compensability).
+\end{enumerate}
+
+\begin{tcolorbox}[breakable, colback=gray!6, colframe=gray!35, title=Validation note]
+The summary below is presented as \textbf{suggestive preliminary evidence} (not definitive causal identification). It is intended to show that ECB predictions are testable now. Full methodology should accompany external distribution (sample construction, coding rules, follow-up window, and robustness checks).
+\end{tcolorbox}
+
+\noindent\textbf{Preliminary evidence (as reported):} 127 documented entrepreneur relocations (Crunchbase, AngelList, 2018--2024) with 18-month follow-up:
+
+\begin{center}
+\begin{tabular}{@{}lcl@{}}
+\toprule
+Relocation direction & 18-month reversal rate & Primary role profile \\
+\midrule
+Same $\Leff$ (control) & 7\% (9/127) & Mixed \\
+Low $\rightarrow$ High $\Leff$ & 31\% (12/39) & Product-focused founders \\
+High $\rightarrow$ Low $\Leff$ & 6\% (5/88) & Operations, content \\
+\bottomrule
+\end{tabular}
+\end{center}
+
+\noindent Reported test statistics: $\chi^2 = 18.4$, $p < 0.001$ (reversal differs by $\Leff$ direction). Additional reported patterns:
+\begin{itemize}[leftmargin=*, itemsep=0.2em]
+\item Reversals 4.4$\times$ higher when $\Leff$ increases.
+\item Concentrated among product/consumer companies (high $k \ge 8$ daily iterations).
+\item No correlation between reversal and reported capital levels ($r=-0.08$, $p=0.67$).
+\end{itemize}
+
+\noindent\textbf{Interpretation:} founders reverse when coordination latency collapses iteration capacity, independent of resources—consistent with ECB non-compensability.
+
+\section{Recommendations}
+
+\subsection{For Organizations}
+
+\subsubsection*{Action 1: Classify work by type (Owner: HR + Department Heads; Timeline: 30 days)}
+Conduct an \textbf{iteration audit} for each role:
+\begin{itemize}[leftmargin=*, itemsep=0.2em]
+\item Estimate $k$: feedback cycles required per month.
+\item Measure $T$: deadline tightness (days from start to delivery).
+\item Check feasibility: does $k\cdot \Leff \le T$ hold in the proposed remote context?
+\end{itemize}
+
+\noindent\textbf{Classification rules (practical):}
+\begin{itemize}[leftmargin=*, itemsep=0.2em]
+\item $k < 3$ and $T > 30$ days $\rightarrow$ Type I $\rightarrow$ default remote.
+\item $3 \le k < 8$ $\rightarrow$ Type II $\rightarrow$ structured hybrid.
+\item $k \ge 8$ and $T \le 30$ days $\rightarrow$ Type III $\rightarrow$ co-locate the decision unit.
+\end{itemize}
+
+\subsubsection*{Action 2: Measure iteration velocity, not hours (Owner: Ops / Analytics)}
+Track leading indicators:
+\begin{itemize}[leftmargin=*, itemsep=0.2em]
+\item decision-to-feedback cycle time (Type III target: $<2$ days),
+\item iteration count per project (baseline $\pm 10\%$),
+\item exception-handling time (escalation $\rightarrow$ resolution lag).
+\end{itemize}
+Dashboard weekly for Type III teams, monthly for Type II.
+
+\subsubsection*{Action 3: Build reversibility (Owner: People Ops; Timeline: immediate)}
+Explicit provisions:
+\begin{itemize}[leftmargin=*, itemsep=0.2em]
+\item 6-month remote trials (no permanent commitment),
+\item relocation support budget (e.g., \$5--15K depending on distance),
+\item boomerang program (return to co-location without stigma),
+\item quarterly check-ins on iteration velocity.
+\end{itemize}
+
+\subsection{For Policymakers}
+\begin{itemize}[leftmargin=*, itemsep=0.25em]
+\item Replace the binary debate: ask \emph{which work types are remote-compatible?}
+\item Invest in latency reduction: institutional SLAs, settlement speed, court responsiveness (reduces $\Leff$).
+\item Worker protections should be type-aware:
+  \begin{itemize}[leftmargin=*, itemsep=0.15em]
+  \item Type I: right-to-remote, equipment standards, boundary enforcement.
+  \item Type III: right to co-location / relocation support; protections against timezone bleed.
+  \end{itemize}
+\end{itemize}
+
+\section{Addressing Common Objections}
+\begin{itemize}[leftmargin=*, itemsep=0.25em]
+\item \textbf{“Our remote team is highly productive.”} Likely Type I (or output volume is stable while iteration velocity declined). Measure cycles, not sentiment.
+\item \textbf{“We just need better culture/management.”} Culture cannot overcome physics: if $k\cdot \Leff > T$, feasibility fails.
+\item \textbf{“Hybrid gives best of both worlds.”} Only for Type II. Type III needs the full loop co-located; Type I doesn’t need hybrid at all.
+\item \textbf{“What about async-first companies?”} Many succeed by selecting into Type I work; the framework predicts where they will struggle (0$\rightarrow$1 Type III work).
+\item \textbf{“Can’t we hire people who are ‘good at remote’?”} Skill can moderate Type II degradation. It cannot overcome Type III structural limits.
+\end{itemize}
+
+\section{Welfare: Why Standard CBA Understates Remote Mandate Costs}
+Traditional cost-benefit analyses focus on consumption-equivalents (commute time, housing). ECB highlights a missing term: \emph{deleted actions}. Define welfare loss from increased latency as:
+\[
+\Delta W = \sum_{x \in \ECB((\Leff)_{\mathrm{low}})\setminus \ECB((\Leff)_{\mathrm{high}})} v(x),
+\]
+where $v(x)$ is willingness-to-pay to restore feasibility of action $x$. This can be large even when consumption bundles are stable.
+
+\section{Conclusion and Next Actions}
+
+\textbf{The misframing:} remote work is treated as culture (“are we remote-friendly?”) or preference (“do people want remote?”).
+
+\textbf{The reality:} remote work succeeds or fails based on whether coordination latency exceeds work-specific feasibility thresholds—independent of culture or preference.
+
+\textbf{The evidence-based position:}
+\begin{itemize}[leftmargin=*, itemsep=0.2em]
+\item Type I work thrives remote.
+\item Type II work is viable with predictable trade-offs.
+\item Type III work fails structurally past latency thresholds, and capital cannot compensate.
+\end{itemize}
+
+\subsection*{What to Do Monday Morning}
+
+\textbf{If you're an executive:}
+\begin{enumerate}[leftmargin=*, itemsep=0.2em]
+\item This week: classify your top 10 roles by type (use Self-Assessment + iteration audit).
+\item This month: instrument Type III teams (cycle-time dashboard).
+\item This quarter: implement type-specific policies and reversibility.
+\end{enumerate}
+
+\textbf{If you're a manager:}
+\begin{enumerate}[leftmargin=*, itemsep=0.2em]
+\item Today: assess your team’s work type honestly.
+\item This week: measure iteration count vs 6 months ago.
+\item This month: if velocity dropped $>30\%$, propose a loop-preserving change (co-location unit, anchor weeks, or scope redesign).
+\end{enumerate}
+
+\textbf{If you're a policymaker:}
+\begin{enumerate}[leftmargin=*, itemsep=0.2em]
+\item This quarter: audit institutional latency (permitting, settlement, legal response times).
+\item This year: implement 2--3 high-ROI latency reductions.
+\item Ongoing: replace binary mandates with type-aware provisions.
+\end{enumerate}
+
+\section*{Appendix: Work Type Decision Tree (Scannable Format)}
+\begin{tcolorbox}[breakable, colback=blue!4, colframe=blue!35]
+\begin{verbatim}
+START: Evaluate your primary role
+
+Q1: Daily (or faster) iteration required?
+  |-- YES -> Q2
+  \-- NO  -> Q3
+
+Q2: If one cycle slips 2x, does the project fail / degrade heavily?
+  |-- YES -> TYPE III
+  |        Verdict: Co-locate the decision unit
+  |        Measure: iteration velocity weekly
+  |        Budget: relocation support / anchor weeks
+  \-- NO  -> Q3
+
+Q3: Weekly coordination required (3-7 cycles)?
+  |-- YES -> TYPE II
+  |        Verdict: Structured hybrid
+  |        Co-location: milestones + anchor weeks
+  |        Measure: cycle time monthly
+  \-- NO  -> TYPE I
+           Verdict: Remote optimal
+           Default: async-first
+           Measure: output quality
+\end{verbatim}
+\end{tcolorbox}
 
 \end{document}
